<resources>
    <string name="app_name">MyMartlet</string>
    <string name="team_name">Appvelopers</string>
    <string name="title_login">Login</string>
    <string name="title_desktop">Desktop Site</string>
    <string name="title_schedule">My Schedule</string>
    <string name="title_transcript">My Transcript</string>
    <string name="title_mycourses">MyCourses</string>
    <string name="title_ebill">My eBill</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="title_map">Campus Map</string>
    <string name="title_change_semester">Change Semester</string>
    <string name="title_registration">Search for Courses</string>
    <string name="title_wishlist">My Course Wishlist</string>
    <string name="title_about">About Us</string>
    <string name="title_courses">My Classes</string>
    <string name="title_help">Help</string>
    <string name="title_report_bug">Report a Problem</string>
    <string name="title_facebook">Share</string>
    <string name="title_twitter">Tweet</string>
    <string name="title_agreement">EULA</string>
    <string name="facebook_id">828093890556007</string>
    <string name="success">Success!</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="done">Done</string>
    <string name="refresh">Refresh</string>
    <string name="submit">Submit</string>
    <string name="error_no_internet">You are not connected to the internet. Please connect to the internet and try again. </string>
    <string name="error_other">An error has occurred. Please try again later.</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="agree">Agree</string>
    <string name="decline">Decline</string>
    <string name="bug_parser_transcript">There was a bug while downloading your transcript. Unfortunately we cannot fix it without seeing what caused it. Do you agree to submit a bug report indicating that you are willing to meet with us? Please note that if this bug is not fixed, there will be an error on your transcript.</string>
    <string name="bug_parser_semester">There was a bug while downloading the following semester\'s classes: %s. Unfortunately we cannot fix it without seeing what caused it. Do you agree to submit a bug report indicating that you are willing to meet with us? Please noe that if this bug is not fixed, there will be an error in your semester schedule.</string>
    <string name="bug_parser_yes">Sure!</string>
    <string name="bug_parser_no">No Thanks</string>
    <string name="bug_parser_no_show">Don\'t show this to me again</string>
    <string name="bug_parser_transcript_title">Parsing bug in Transcript for: %s</string>
    <string name="bug_parser_semester_title">Parsing bug in Semester for Semester %1$s and Class %2$s</string>
    <string name="skip_loading">If you continue, your most recent information (current schedule and transcript) will not automatically be updated. Continue ?</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="summer">Summer</string>
    <string name="faculty_enviro">Faculty of Agricultural and Environmental Sciences</string>
    <string name="faculty_arts">Faculty of Arts</string>
    <string name="faculty_continuing_studies">School of Continuing Studies</string>
    <string name="faculty_dentistry">Faculty of Dentistry</string>
    <string name="faculty_education">Faculty of Education</string>
    <string name="faculty_engineering">Faculty of Engineering</string>
    <string name="faculty_graduate">Graduate and Postdoctoral Studies</string>
    <string name="faculty_law">Faculty of Law</string>
    <string name="faculty_management">Desautels Faculty of Management</string>
    <string name="faculty_medecine">Faculty of Medicine</string>
    <string name="faculty_music">Schulich School of Music</string>
    <string name="faculty_religion">Faculty of Religious Studies</string>
    <string name="faculty_science">Faculty of Science</string>
    <string name="login_welcome">Welcome to MyMartlet. Please input your McGill username and password below.</string>
    <string name="login_username">Username</string>
    <string name="login_email">\@mail.mcgill.ca</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_error_wrong_data">The username or password you have entered is incorrect. Please try again. </string>
    <string name="login_error_username_empty">You must input a username.</string>
    <string name="login_error_password_empty">You must input a password. </string>
    <string name="login_remember_username">Remember my username</string>
    <string name="new_version_title">A new version of the app is available, and we need you to download it before continuing. Promise, it\'ll be worth it. </string>
    <string name="new_version_button">Get It Now</string>
    <string name="eula_title">MyMartlet App End User License Agreement</string>
    <string name="eula_description">This End User License Agreement (“Agreement”) is between you and Appvelopers and governs the use of this app made available through the Play Store. By installing the MyMartlet App, you agree to be bound by this Agreement. If you do not agree with the terms and conditions of this Agreement, you are not entitled to use the MyMartlet App.</string>
    <string name="eula_parties">1. Parties</string>
    <string name="eula_parties_decription">This Agreement is between you and Appvelopers only, and not McGill University. McGill University is not affiliated with Appvelopers and McGill University is not responsible for any misuse of the MyMartlet App. Appvelopers, not McGill University, is solely responsible for the MyMartlet App.</string>
    <string name="eula_privacy">2. Privacy</string>
    <string name="eula_privacy_description">MyMartlet may collect and use information about your usage of the MyMartlet App, including certain types of information from and about your device. Appvelopers may use this information, as long as it is in a form that does not personally identify you, to measure the use and performance of the MyMartlet App. </string>
    <string name="eula_content">3. Content</string>
    <string name="eula_content_description">Appvelopers does not collect nor use personal information that is presented by the MyMartlet App (“User Content”). User Content is stored only on the user\'s device and the user is solely responsible for upholding the safety of the User Content. Appvelopers is not responsible, nor McGill University, for the misplacement or misuse of the User Content.</string>
    <string name="eula_license">4. License</string>
    <string name="eula_license_description">Appvelopers grants the ability to use the MyMartlet App for your personal, non-commercial purposes. You may only use the MyMartlet App on devices that you own or control and as permitted by the Play Store Terms of Service.</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>
    <string name="logout_dialog_positive">Yes</string>
    <string name="logout_dialog_negative">Cancel</string>
    <string name="transcript_termGPA">Term GPA: %s</string>
    <string name="transcript_CGPA">CGPA: %s</string>
    <string name="transcript_credits">Total Credits: %s</string>
    <string name="transcript_semesters">Semesters: </string>
    <string name="transcript_error">We are unable to load your transcript. Please try again later.</string>
    <string name="semester_termCredits">Term Credits: %s</string>
    <string name="semester_fullTime">Full Time</string>
    <string name="semester_partTime">Part Time</string>
    <string name="semester_courses">Courses: </string>
    <string name="course_credits">Credits: %s</string>
    <string name="course_average">Class Average: %s</string>
    <string name="am">%s A.M.</string>
    <string name="pm">%s P.M.</string>
    <string name="am_long">%1$s:%2$s A.M.</string>
    <string name="pm_long">%1$s:%2$s P.M.</string>
    <string name="course_time">%1$s - %2$s</string>
    <string name="schedule_change_semester">Change Semester</string>
    <string name="course_time_title">Time: </string>
    <string name="course_location">Room: </string>
    <string name="schedule_type">Schedule Type: </string>
    <string name="course_prof">Professor: </string>
    <string name="course_section">Section: </string>
    <string name="course_credits_title">Credits: </string>
    <string name="course_crn">CRN: </string>
    <string name="course_docuum">View Course on Docuum</string>
    <string name="course_map">Show on Map</string>
    <string name="ebill_statement_date">Statement Date: %s</string>
    <string name="ebill_due_date">Due Date: %s</string>
    <string name="settings_language">Language</string>
    <string name="settings_homepage">Homepage</string>
    <string name="settings_statistics">Anonymous Usage Statistics </string>
    <string name="homepage_schedule">Schedule</string>
    <string name="homepage_transcript">Transcript</string>
    <string name="homepage_mycourses">MyCourses</string>
    <string name="homepage_courses">Course List</string>
    <string name="homepage_search">Course Search</string>
    <string name="homepage_wishlist">Wishlist</string>
    <string name="homepage_ebill">eBill</string>
    <string name="homepage_map">Campus Map</string>
    <string name="homepage_desktop">Desktop Site</string>
    <string name="settings_version">Version %s</string>
    <string name="change_semester_season">Season: </string>
    <string name="change_semester_year">Year:</string>
    <string name="change_semester_default">Set as Default</string>
    <string name="registration_semester">Semester:</string>
    <string name="registration_subject">Subject (ex: MATH)</string>
    <string name="registration_course_number">Course Number</string>
    <string name="registration_invalid_subject">Invalid subject: Please a enter four character subject.</string>
    <string name="registration_error">Registration Error</string>
    <string name="walkthrough_essentials">All of your most important McGill tools are now at the tips of your fingertips: schedule, transcript, a campus map&#8230; It\'s all there!</string>
    <string name="walkthrough_offline">This app keeps you connected at all times, so no need to log in constantly!  You can use the app offline too!</string>
    <string name="walkthrough_security">All of your data (password included) is only stored locally on your phone. As an extra security measure, your password is encrypted. We will be collecting anonymous usage statistics, but you can opt out at any time in the Settings.</string>
    <string name="walkthrough_help">To see this walkthrough again, please consult our Help Section in the settings. There, you will also find the About Section which includes info about the team behind this app, and different ways to contact us.</string>
    <string name="walkthrough_bugs">If you find any bugs, don\'t hesitate to report them via the Settings Section</string>
    <string name="walkthrough_email">Set up your McGill email account on your device by going to Settings -&gt; Help -&gt; Set up your Email</string>
</resources>