<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin">

            <TextView
                style="@style/EULATitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eula_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_description"/>

            <TextView
                style="@style/EULATitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_parties"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_parties_description"/>

            <TextView
                style="@style/EULATitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_privacy"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_privacy_description"/>

            <TextView
                style="@style/EULATitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_content_description"/>

            <TextView
                style="@style/EULATitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_license"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_license_description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonsContainer"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decline"
                    android:id="@+id/decline"
                    android:textColor="@color/red"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree"
                    android:id="@+id/agree"
                    android:textColor="@color/red"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>