<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/close"
        android:textColor="@color/red"
        android:text="@string/skip"/>

    <com.viewpagerindicator.CirclePageIndicator
        android:layout_height="20dp"
        android:layout_width="match_parent"
        android:id="@+id/indicator"/>

    <android.support.v4.view.ViewPager
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:id="@+id/view_pager"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:textColor="@color/red"
            android:text="@string/back"
            android:visibility="invisible"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next"
            android:textColor="@color/red"
            android:text="@string/next"/>
    </LinearLayout>

</LinearLayout>